# tmp_debug_nrf

./: CMakeLists.txt  Kconfig  Kconfig.quantum  prj.conf  sample.yaml  testing_display_functions.c
boards/KiwiElectronics/nrf52840_quantum_v2/: Kconfig.nrf52840_quantum_v2  board.yml  nrf52840_quantum_v2.dts  nrf52840_quantum_v2.yml  nrf52840_quantum_v2_defconfig
boards/arm/nrf52840_quantum/: Kconfig.board  Kconfig.defconfig  nrf52840_quantum.dts  nrf52840_quantum.overlay  nrf52840_quantum.yaml
boards/arm/quantum/: Kconfig.board  Kconfig.defconfig  quantum.dts  quantum.yaml  quantum_defconfig
boards/arm/test/: Kconfig.board  Kconfig.defconfig  test.dts  test.yaml  test_defconfig
drivers/: CMakeLists.txt  Kconfig.ssd1333  ssd1333.c
drivers/SPIM/: ssd1333.c  ssd1333_regs.h
drivers/dts/bindings/display/: solomon,ssd1333.yaml
